# deepxde-custom

./: .gitignore  README.md  pyproject.toml  teste.ipynb
api/: utils.py
models/: PINN.py  boundary_conditions.py  cylinder.py  data.py  domains.py  neural_network.py  rheology.py
notebooks/: NewtonianSimulation.ipynb  blastoise.ipynb  blastoise_newton.ipynb  blastoise_newton_Up_v_I.ipynb  blastoise_newton_tensores.ipynb  delta_dirac copy.ipynb  delta_dirac.ipynb  encit_analysis.ipynb  encit_vi_-05.ipynb  encit_vi_05.ipynb  load_results.ipynb  non_newtonian_fluid.ipynb  non_newtonian_fluid_cylinder.ipynb
notebooks/Testes de malha/: NS_New_2D_lapaciano_Couette(1000_100_3k_1k) copy.ipynb  NS_New_2D_lapaciano_Couette(500_50_3k_1k).ipynb
notebooks/final/: Final_NS_Newtoniana_2D_Tensor_Couette-Poiseuille.ipynb  Final_NS_Newtoniana_2D_Tensor_Poiseuille.ipynb  Laplace.ipynb  NS_Bingham_2D_ESCADA copy.ipynb  NS_Bingham_2D_Papasnastasiou_Corrigido.ipynb  NS_Bingham_2D_Papasnastasiou_TFwhere copy.ipynb  NS_Bingham_2D_TFwhere copy.ipynb  NS_Bingham_2D_TFwhere.ipynb  NS_Newton_2D_Papasnastasiou_Corrigido.ipynb  NS_Newton_2D_laplace_Poiseuille.ipynb  NS_Newtoniana_2D_Tensor_Couette-Poiseuille.ipynb  NS_PowerLaw_2D_Tensor_Couette-Poiseuille.ipynb  confiamos_em_deus.ipynb  confiamos_em_deus_placa_BINGHAM.ipynb  confiamos_em_deus_placa_BINGHAM_parede.ipynb  confiamos_em_deus_placa_plana.ipynb
notebooks/testes/: VALIDAÇÃO.ipynb  (+8 more)
scripts/: export_points.py  functions.py  pde.py  plotting.py  run_cases.py  seed_test.py
training/: 12500-1833.csv  2500-500.csv  6250-1000.csv
(+2 files in other folders)
