[tool.poetry]
name = "deepxde-custom"
version = "0.1.0"
description = ""
authors = ["pabloharbar <harbar2705@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.10, < 3.11"
deepxde = "^1.11.0"
tensorflow-io-gcs-filesystem = "~0.27.0"
tensorflow = "~2.10"
jupyter = "^1.0.0"
matplotlib = "^3.8.4"
tensorflow-probability = "~0.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
